ajout correction Exo 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <section>
   <h1>Bienvenue sur mon application angular :) ! </h1>
   <app-my-first-component></app-my-first-component>
-
+  <app-my-form></app-my-form>
+  <app-ng-for></app-ng-for>
 </section>
